changing memory and children pages to redirect to self